<resources>
    <string name="app_name">Orient Garden</string>
    <string name="label_stolen_items">Incident Title</string>
    <string name="complex_number">House No. </string>
    <string name="description">Description:</string>
    <string name="title_activity_create_post">CreatePost</string>
    <string name="create_post">Create Post</string>
    <string name="add_new_incident">Opening Add Activity</string>
    <string name="post_incident">Post Incident</string>
    <string name="view_incident">View Incident</string>
    <string name="profile_view">Profile</string>
    <string name="add_image">+ Add Image</string>
    <string name="submit">Submit</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image_selected">Image Selected</string>
    <string name="icon_for_done">Icon for done</string>
    <string name="image_stolen_item">Image of stolen item</string>
    <string name="signin">Sign In</string>
    <string name="image_for_sign_in_activity">Image for Sign in activity</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="google_logo">Google Logo</string>
    <string name="web_id">671324227842-8coeg0br7fj5rm0dseb37uun8u8cof29.apps.googleusercontent.com</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_email">Email</string>
    <string name="profile">Profile</string>
    <string name="icon_for_profile">icon for profile</string>
    <string name="logout">logout</string>
    <string name="logout_icon">logout icon</string>
    <string name="preference_file_key">com.example.orientgardenneighbourhoodwatch.Preference_File_Key</string>
    <string name="house_number">House Number</string>
    <string name="no_house_number">0</string>
    <string name="login_imageview_contentdescription">Application logo</string>
    <string name="login_imagebutton_contentdescription">Google signin ImageButton</string>
    <string name="noConnection">No Internet Connection</string>
    <string name="readErrorMessage">Error: Failure Reading Data</string>
    <string name="house_number_not_available">House number already registered to another user</string>
    <string name="noDataContext">Check your internet connection. Restart the application.</string>
    <string name="refreshImageViewDesc">refresh icon, when pressed the activity reloads</string>

</resources>