<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="8"
        android:background="@drawable/rounded_edit_text"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/user_name"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:singleLine="true"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:enabled="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:singleLine="true"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/ProfileHouseNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/complex_number"
            android:inputType="number"
            android:maxLength="2"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:singleLine="true"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/warning_message_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/house_number_not_available"
            android:textAlignment="center"
            android:textColor="@color/waring_colour_orange" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.sourcream.orientgardenneighbourhoodwatch.SubmitButton
            android:id="@+id/profile_submitButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:elevation="8dp"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>