<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/rounded_edit_text"
    android:orientation="vertical"
    tools:context=".ViewIncident">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_stolen_items"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/vp_stolenItemTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                style="@style/textColor"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Gate Motor" />

            <ImageView
                android:id="@+id/vp_stolenItemImageView"
                android:layout_width="match_parent"
                android:layout_height="306dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/image_stolen_item"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complex_number"
                    style="@style/textColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/vp_houseNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/textColor"
                    android:textSize="16sp"
                    tools:text="@string/complex_number" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                style="@style/textColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/vp_descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:singleLine="false"
                style="@style/textColor"
                android:textSize="16sp"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
        </LinearLayout>

    </ScrollView>

</LinearLayout>